# serialice-unicorn

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.mit  README.md
shell/: Kconfig  io.h  serial.c  serialice.c  serialice.ld  start.S
shell/mainboard/: asus_h110m-adp.c  dell_optiplex-9020.c
shell/superio/: nuvoton-nct6776.c
simba/mainboard/: asus_h110m_adp.lua
src/: com.cpp  com.h  emu.cpp  emu.h  filter.cpp  filter.h  main.cpp  misc.cpp  misc.h  serialice.h  serialice.py  shell.py
